--- a/Tracking/window_person.xaml
+++ b/Tracking/window_person.xaml
@@ -12,15 +12,15 @@
                     <Label Content="寄件人姓名：" HorizontalAlignment="Left" Height="25" Margin="10,10,0,0" VerticalAlignment="Top" Width="75"/>
                     <Label Content="寄件人地址：" HorizontalAlignment="Left" Height="25" Margin="10,40,0,0" VerticalAlignment="Top" Width="75"/>
                     <Label Content="寄件人电话：" HorizontalAlignment="Left" Height="25" Margin="10,70,0,0" VerticalAlignment="Top" Width="75"/>
-                    <TextBox x:Name="sendername" HorizontalAlignment="Left" Height="25" Margin="100,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="255"/>
-                    <TextBox x:Name="senderaddr" HorizontalAlignment="Left" Height="25" Margin="100,40,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="255"/>
-                    <TextBox x:Name="senderphone" HorizontalAlignment="Left" Height="25" Margin="100,70,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="255"/>
+                    <TextBox x:Name="sendername" Text="闫昊" HorizontalAlignment="Left" Height="25" Margin="100,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="255"/>
+                    <TextBox x:Name="senderaddr" Text="啦啦啦，德玛西亚" HorizontalAlignment="Left" Height="25" Margin="100,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="255"/>
+                    <TextBox x:Name="senderphone" Text="12345678901" HorizontalAlignment="Left" Height="25" Margin="100,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="255"/>
                     <Label Content="收件人姓名：" HorizontalAlignment="Left" Height="25" Margin="10,100,0,0" VerticalAlignment="Top" Width="75"/>
                     <Label Content="收件人地址：" HorizontalAlignment="Left" Height="25" Margin="10,130,0,0" VerticalAlignment="Top" Width="75"/>
                     <Label Content="收件人电话：" HorizontalAlignment="Left" Height="25" Margin="10,160,0,0" VerticalAlignment="Top" Width="75"/>
-                    <TextBox x:Name="receivername" HorizontalAlignment="Left" Height="25" Margin="100,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="255"/>
-                    <TextBox x:Name="receiveraddr" HorizontalAlignment="Left" Height="25" Margin="100,130,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="255"/>
-                    <TextBox x:Name="receiverphone" HorizontalAlignment="Left" Height="25" Margin="100,160,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="255"/>
+                    <TextBox x:Name="receivername" Text="张悦" HorizontalAlignment="Left" Height="25" Margin="100,100,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
+                    <TextBox x:Name="receiveraddr" Text="啦啦啦，艾欧尼亚" HorizontalAlignment="Left" Height="25" Margin="100,130,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
+                    <TextBox x:Name="receiverphone" Text="12345678901" HorizontalAlignment="Left" Height="25" Margin="100,160,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="255"/>
                     <Label Content="发货站点：" HorizontalAlignment="Left" Height="25" Margin="10,190,0,0" VerticalAlignment="Top" Width="75"/>
                     <Label Content="收货站点：" HorizontalAlignment="Left" Height="25" Margin="10,220,0,0" VerticalAlignment="Top" Width="75"/>
                     <ComboBox x:Name="sendsite" HorizontalAlignment="Left" Height="25" Margin="100,190,0,0" VerticalAlignment="Top" Width="255"/>
@@ -31,9 +31,9 @@
             <TabItem Header="查询" Width="50">
                 <Grid Background="#FFE5E5E5">
                     <Label Content="单号：" HorizontalAlignment="Left" Height="25" Margin="10,10,0,0" VerticalAlignment="Top" Width="50"/>
-                    <TextBox x:Name="goodsid" HorizontalAlignment="Left" Height="25" Margin="60,10,0,0" TextWrapping="Wrap" Text="text" VerticalAlignment="Top" Width="249" VerticalContentAlignment="Center" />
-                    <DataGrid HorizontalAlignment="Left" Height="227" Margin="10,70,0,0" VerticalAlignment="Top" Width="446"/>
+                    <TextBox x:Name="goodsid" HorizontalAlignment="Left" Height="25" Margin="60,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="249" VerticalContentAlignment="Center" />
                     <Button x:Name="search" Content="查询" HorizontalAlignment="Left" Height="25" Margin="345,10,0,0" VerticalAlignment="Top" Width="111" Click="search_Click"/>
+                    <TextBlock HorizontalAlignment="Left" x:Name="info_textblock" Height="261" Margin="20,51,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="436"/>
                 </Grid>
             </TabItem>
         </TabControl>
