--- a/Tracking/window_company.xaml
+++ b/Tracking/window_company.xaml
@@ -89,7 +89,7 @@
             </TabItem>
             <TabItem Header="已到达" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="-1,0,0,0">
                 <Grid Background="#FFE5E5E5">
-                    <local:ZsmTreeView x:Name="checkTree_gd_arrived" HorizontalAlignment="Left" Height="110" Margin="0,-5,0,0" VerticalAlignment="Top" Width="190"/>
+                    <local:ZsmTreeView x:Name="checkTree_gd_arrived"/>
                 </Grid>
             </TabItem>
         </TabControl>
